<resources>
    <string name="app_name">OficinaOnline</string>
    <string name="inserirUtilizadorTitulo">Inserir Utilizador</string>
    <string name="mecanico">Mecânico</string>
    <string name="cliente">Cliente</string>
    <string name="registar_veiculo">Registar Veículo</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="data_inicio">Data Início</string>
    <string name="data_fim">Data Fim</string>
    <string name="insere_ocorrencia">Marcações</string>
    <string name="km">Quilómetros</string>
    <string name="detalhes">Detalhes</string>
    <string name="marcaTitulo">Marca:</string>
    <string name="ver_veiculos">Ver Veículos</string>
    <string-array name="opcoesInserirUtilizador">
        <item>Mecanico</item>
        <item>Cliente</item>
    </string-array>
    <string-array name="opcoesInserirOcorrencia">
        <item value="1">1</item>
        <item value="2">2</item>
        <item value="3">3</item>
        <item value="4">4</item>
    </string-array>
</resources>
