<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inserir_ocorrencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ipg.pt.oficinaonline.InserirOcorrencia">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insere_ocorrencia"
        android:textSize="20sp"
        android:textColor="@color/colorHeader"
        android:id="@+id/textViewInserirOcorrencia" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDataInicio"
        android:hint="@string/data_inicio"
        android:layout_below="@+id/textViewInserirOcorrencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:inputType="date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDataFim"
        android:hint="@string/data_fim"
        android:layout_below="@+id/editTextDataInicio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:inputType="date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextKm"
        android:hint="@string/km"
        android:layout_below="@+id/editTextDataFim"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:inputType="number"/>
    <ListView
        android:id="@+id/list"
        android:scrollbars="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/editTextKm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserirUtilizadorTitulo"
        android:layout_below="@+id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
</ScrollView>