<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ipg.pt.oficinaonline.MainActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserirUtilizadorTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/botaoMainInsU"
        android:onClick="BotaoInserirUtilizador"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registar_veiculo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/botaoMainInsU"
        android:layout_marginTop="11dp"
        android:id="@+id/botaoMainRegV"
        android:onClick="BotaoRegistarVeiculo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insere_ocorrencia"
        android:id="@+id/botaoMainMarcacoes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/botaoMainRegV"
        android:layout_marginTop="11dp"
        android:onClick="BotaoInserirOcorrencia"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botaoMainVerVeiculos"
        android:text="@string/ver_veiculos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/botaoMainMarcacoes"
        android:layout_marginTop="11dp"
        android:onClick="BotaoVerVeiculos"/>
</RelativeLayout>
